# Agentic-AI

./: pyproject.toml  requirements.txt
1. Langchain/: 1. Different ways to integrate Models.ipynb  2. Create an Agent.ipynb  3. Tools Creation.ipynb  4. Messages.ipynb  5. Structured Output.ipynb  6. Middleware.ipynb
2. Langgraph/: 1. Componenets of Langgraph (Graph API).ipynb  2. Basic Chatbot with Langgraph.ipynb  3. Chatbot with Tools with Langgraph.ipynb  4. Adding Memory In Agentic Graph.ipynb  5. Streaming.ipynb  6. Human In The Loop.ipynb
2. Langgraph/7. MCP/: MCP.ipynb  client.py  mathserver.py  weather.py
3. RAG/: 1. RAG.ipynb  2. Data_Ingestion_Understanding.ipynb  3. Data_Ingestion_Pipeline.ipynb  4. Retrieval_Pipeline.ipynb
3. RAG/Data/Text_Files/: machine_learning.txt  python.txt
3. RAG/faiss_db/: index.faiss  index.pkl
4. Deep Agents/: 1. Deep_Agents.ipynb  2. Basic_Deep_Agent_Implementation.ipynb  2. Deep_Agent_Implementation.ipynb
5. Guardrails/: 1. Understanding.ipynb  2. Implementation.ipynb
