[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langchain-tavily>=0.2.18",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.9",
    "langsmith>=0.10.5",
    "mcp>=1.28.1",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "unstructured-inference>=1.6.13",
    "unstructured[all-docs]>=0.24.1",
]
